--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nx/angular": "^16.1.0"
+  },
   "devDependencies": {
     "nx": "16.1.0"
   },
