--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bizappzone/poc-base-ui",
+  "name": "@bizapzone/poc-design",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.0.0",
