--- a/packages/forms-ui/package.json
+++ b/packages/forms-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bizappzone/poc/forms-ui",
+  "name": "@bizappzone/poc-forms-ui",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.0.0",
